update building setting

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,13 @@ matrix:
         - docker
       env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
            PLAT=manylinux1_x86_64
+           PIP=pip3
     - sudo: required
       services:
         - docker
       env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
            PLAT=manylinux2010_x86_64
+           PIP=pip3
     - os: osx
       language: generic
       env: PIP=pip3
@@ -21,9 +23,8 @@ matrix:
         - choco install python3 --version 3.6.8 --no-progress -y
       env:
         - PATH=/c/Python36:/c/Python36/Scripts:$PATH
+          PIP=pip3
 
 script:
   - $PIP install cibuildwheel==1.0.0
-
-  # build the wheels, put them into './wheelhouse'
   - cibuildwheel --output-dir wheelhouse
