--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: python
-python:
-  - 3.5
-  - 3.6
-  - 3.7
+
 matrix:
   include:
     - sudo: required
@@ -11,9 +8,11 @@ matrix:
       env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
            PLAT=manylinux2010_x86_64
            PIP=pip3
+      python: 3.6
     - os: osx
       language: generic
       env: PIP=pip3
+      python: 3.6
     - os: windows
       language: shell
       before_install:
