--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,10 @@ matrix:
           PIP=pip3
 env:
   global:
-    - CIBW_BEFORE_BUILD: pip install pybind11
-    - CIBW_BEFORE_BUILD: yum -y install boost-devel
+    - CIBW_SKIP: cp3?-*
+    - CIBW_SKIP: "*-win32 *-manylinux_i686"
+    - CIBW_BEFORE_BUILD: "pip install pybind11"
+    - CIBW_BEFORE_BUILD: "yum -y install boost-devel"
 script:
   - $PIP install cibuildwheel==1.0
   - cibuildwheel --output-dir wheelhouse
