--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,5 @@ env:
     - CIBW_BEFORE_BUILD: "pip install pybind11"
     - CIBW_BEFORE_BUILD: "yum -y install boost-devel"
 script:
-  - $PIP install cibuildwheel==1.0
+  - $PIP install cibuildwheel
   - cibuildwheel --output-dir wheelhouse
