--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ matrix:
 env:
   global:
     - CIBW_BUILD: cp3?-*
-    - CIBW_SKIP: '*-win32 *-manylinux_i686'
-    - CIBW_BEFORE_BUILD: 'pip install pybind11'
-    - CIBW_BEFORE_BUILD: 'yum -y install boost-devel'
+    - CIBW_SKIP: "'*-win32 *-manylinux_i686'"
+    - CIBW_BEFORE_BUILD: "'pip install pybind11'"
+    - CIBW_BEFORE_BUILD: "'yum -y install boost-devel'"
 script:
   - $PIP install cibuildwheel
   - cibuildwheel --output-dir wheelhouse
