--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ env:
   global:
     - CIBW_BUILD: cp3?-*
     - CIBW_SKIP: "'*-win32 *-manylinux_i686'"
-    - CIBW_BEFORE_BUILD: "'pip install pybind11' 'yum -y install boost-devel'"
+    - CIBW_BEFORE_BUILD: "'pip install pybind11; yum -y install boost-devel'"
 script:
   - $PIP install cibuildwheel
   - cibuildwheel --output-dir wheelhouse
