--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ matrix:
       env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
            PLAT=manylinux2010_x86_64
            PIP=pip3
+           CIBW_BEFORE_BUILD="'yum -y install boost-devel'"
       python: 3.6
     - os: osx
       language: generic
@@ -17,6 +18,7 @@ matrix:
       language: shell
       before_install:
         - choco install python3 --version 3.6.8 --no-progress -y
+        - choco install boost-msvc-14.1
       env:
         - PATH=/c/Python36:/c/Python36/Scripts:$PATH
           PIP=pip3
@@ -24,7 +26,7 @@ env:
   global:
     - CIBW_BUILD: cp3?-*
     - CIBW_SKIP: "'*-win32 *-manylinux_i686'"
-    - CIBW_BEFORE_BUILD: "'pip install pybind11; yum -y install boost-devel'"
+    - CIBW_BEFORE_BUILD: "'pip install pybind11'"
 script:
   - $PIP install cibuildwheel
   - cibuildwheel --output-dir wheelhouse
