--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ matrix:
   - sudo: required
     services:
     - docker
-    env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64 PLAT=manylinux2010_x86_64
-      PIP=pip3 CIBW_BEFORE_BUILD="'pip install pybind11; yum -y install boost-devel'"
+    env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64 
+         PLAT=manylinux2010_x86_64
+         PIP=pip3 
+         CIBW_BEFORE_BUILD="'pip install pybind11; yum -y install boost-devel'"
     python: 3.6
   - os: osx
     language: generic
@@ -17,7 +19,8 @@ matrix:
     - choco install python3 --version 3.6.8 --no-progress -y
     - choco install boost-msvc-14.1
     env:
-    - PATH=/c/Python36:/c/Python36/Scripts:$PATH PIP=pip3
+    - PATH=/c/Python36:/c/Python36/Scripts:$PATH 
+      PIP=pip3
 env:
   global:
   - TWINE_USERNAME: "__token__"
@@ -25,7 +28,7 @@ env:
   - CIBW_SKIP: "'*-win32 *-manylinux_i686'"
   - CIBW_BEFORE_BUILD: "'pip install pybind11'"
 script:
-- "$PIP install cibuildwheel"
+- "$PIP install cibuildwheel==1.0.0"
 - cibuildwheel --output-dir wheelhouse
 - ls -l wheelhouse
 - |
