--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
     env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64 
          PLAT=manylinux2010_x86_64
          PIP=pip3 
-         CIBW_BEFORE_BUILD="'pip install pybind11; yum -y install boost-devel'"
+         CIBW_BEFORE_BUILD="pip install pybind11; yum -y install boost-devel"
     python: 3.6
   - os: osx
     language: generic
