--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
     language: shell
     before_install:
     - choco install python3 --version 3.6.8 --no-progress -y
-    - choco install boost-msvc-14.1
+    - choco install boost-msvc-14.1 --no-progress -y
     env:
     - PATH=/c/Python36:/c/Python36/Scripts:$PATH 
       PIP=pip3
