--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ matplotlib>=3.0
 MDAnalysis>=0.19
 pymatgen>=2019.3.13
 PyQt5>=5.13
+scikit-learn>=0.21
+pyqtgraph @ git+https://github.com/pyqtgraph/pyqtgraph@6e9a48558c010803883f0f83a7170581098b978a
+pgcolorbar @ git+https://github.com/solccp/pgcolorbar.git@dadd5806
