--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ env:
   - CIBW_SKIP: "'*-win32 *-manylinux_i686'"
   - CIBW_BEFORE_BUILD: "'pip install pybind11'"
 script:
-- "$PIP install pip --upgrade
+- "$PIP install pip --upgrade"
 - "$PIP install cibuildwheel==1.0.0"
 - cibuildwheel --output-dir wheelhouse
 - ls -l wheelhouse
