--- a/requirements_pip.txt
+++ b/requirements_pip.txt
@@ -3,7 +3,8 @@ statsmodels>=0.9.0
 matplotlib>=3.0
 MDAnalysis>=0.19
 pymatgen>=2019.3.13
-PyQt5>=5.13
+PyQt5==5.13.2
 scikit-learn>=0.21
-pyqtgraph@git+https://github.com/pyqtgraph/pyqtgraph@6e9a48558c010803883f0f83a7170581098b978a
-pgcolorbar@git+https://github.com/solccp/pgcolorbar.git@dadd5806
+pyqtgraph @ git+https://github.com/solccp/pyqtgraph@6a2791e1c41ee5b08e860186c26613ddc4ef201d#egg=pyqtgraph-0.11.0
+pgcolorbar @ git+https://github.com/solccp/pgcolorbar@dadd5806b82e69ed883f5bbb435eda909c9b27bf#egg=pgcolorbar-1.0.0
+scikit_image>=0.16.2
